Fixed some whitespace

--- a/css/grayscale.less
+++ b/css/grayscale.less
@@ -277,7 +277,7 @@ a:focus {
  // Content Sections
 
  .content-section {
-    padding-top: 100px;
+    padding-top: 120px;
 }
 
 .download-section {
